Implement message length restriction

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     Title:<br>
     <input type="text" name="title"><br>
     Contents:<br>
-    <textarea name="contents" rows="3" cols="50"></textarea><br>
+    <textarea name="contents" rows="3" cols="50" maxlength="250"></textarea><br>
 
     <input type="submit", value="Send">
 </form>
