--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,32 @@
-{% block content %}
-{% if session.username %}
-<p>Logged in as {{ session.username }}</p>
-<a href="/logout">Log out</a>
-{% else %}
-{% if login_error == 'credentials' %}
-<p>Wrong username or password!</p>
-{% elif login_error == 'username' %}
-<p>Username taken!</p>
-{% endif %}
-<form action="/login" method="POST">
-    <p>Username:<br>
-        <input type="text" name="username">
-    </p>
-    <p>Password:<br>
-        <input type="password" name="password">
-    </p>
-    <input type="submit" name="login" value="Log in"><br>
-    <input type="submit" name="register" value="Create account"><br>
-</form>
-{% endif %}
-<hr>
+{% extends 'layout.html' %}
 
-<h1>Storytree</h1>
-<p>Posts:</p>
+{% block content_body %}
+<div class="container h-100 d-flex flex-column align-items-center">
+    {% for post in posts %}
 
-{% for post in posts %}
-<div>
-    <a href="/posts/{{post.id}}">{{ post.title }}</a><br>
-    Contents: {{ post.content }}<br>
-    Created by: {{ post.username }}<br>
-    Created at: {{ post.sent_at.strftime("%Y-%m-%d %H:%M:%S") }}<br>
+    <div class="card border-0 bg-light rounded shadow" style="min-width: 800px">
+        <div class="card-body text-decoration-none">
+            <div class="card-text d-flex justify-content-between text-secondary pb-1">
+                <small class="text-left">#{{ post.id }}</small>
+                <small class="text-right">By {{ post.author }} &sdot; {{ post.sent_at.strftime("%Y-%m-%d %H:%M")
+                    }}</small>
+            </div>
+            <span role="button" tabindex="0" onclick="window.location.href = '/posts/{{post.id}}'">
+                <h5 class="card-title">{{ post.title }}</h5>
+                <p class="card-text">{{ post.content }}</p>
+            </span>
+            <div class="d-flex pt-3">
+                <span class="me-auto">
+                    {% for tag in post.tags %}
+                    <span class="badge rounded-pill bg-secondary">#{{ tag }}</span>
+                    {% endfor %}
+                </span>
+                <span class="pe-3">{{ post.num_likes }} <i class="bi bi-heart"></i></span>
+                <span class="">{{ post.num_comments }} <i class="bi bi-chat"></i></span>
+            </div>
+        </div>
+    </div>
+    <br>
+    {% endfor %}
 </div>
-<hr>
-{% endfor %}
-<br>
-{% if session.username %}
-<h3>Add new story</h3>
-<form action="/addstory", method="POST">
-    Title:<br>
-    <input type="text" name="title"><br>
-    Contents (max. 256 characters):<br>
-    <textarea name="contents" rows="3" cols="50" maxlength="250"></textarea><br>
-
-    <input type="submit", value="Send">
-</form>
-{% endif %}
 {% endblock %}
