--- a/templates/login.html
+++ b/templates/login.html
@@ -9,11 +9,11 @@
         </div>
         {% endif %}
         <div class="mb-3">
-            <label for="username-field" class="form-label">Username</label>
-            <input type="text" name="username" class="form-control" id="username-field" value={{ last_login_name }} required>
+            <label for="username-field" class="form-label">Username*</label>
+            <input type="text" name="username" class="form-control" id="username-field" value="{{ last_login_name }}" required>
         </div>
         <div class="mb-3">
-            <label for="password-field" class="form-label">Password</label>
+            <label for="password-field" class="form-label">Password*</label>
             <input type="password" name="password" class="form-control" id="password-field" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
