--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,12 @@
                     {% endfor %}
                 </span>
                 <span role="button" tabindex="0">
+                    {% if current_user.is_authenticated %}
                     <a id="btn-like-{{ post.id }}" class="pe-3 text-decoration-none text-dark">
-                        {{ post.num_likes }} 
+                    {% else %}
+                    <a id="btn-like-{{ post.id }}" class="pe-3 text-decoration-none text-dark" href="/login">
+                    {% endif %}
+                        {{ post.num_likes }}
                         <i class="bi bi-heart{%if post.liked %}-fill{% endif %}"></i>
                     </a>
                 </span>
@@ -45,6 +49,7 @@
         </div>
     </div>
     <br>
+    {% if current_user.is_authenticated %}
     <script>
         $(document).ready(function () {
             $('#btn-like-{{ post.id }}').click(function () {
@@ -62,6 +67,7 @@
             });
         });
     </script>
+    {% endif %}
     {% endfor %}
 </div>
 
