--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </div>
 
     {% for post in posts %}
-    <div class="card border-0 bg-light rounded shadow" style="min-width: 800px">
+    <div class="card border-0 bg-light rounded shadow" style="min-width: 800px; max-width: 800px">
         <div class="card-body text-decoration-none">
             <div class="card-text d-flex justify-content-between text-secondary pb-1">
                 <small class="text-left">#{{ post.id }}</small>
