--- a/templates/storypage.html
+++ b/templates/storypage.html
@@ -3,7 +3,7 @@
 {% block content_body %}
 <div class="container">
     <div class="pt-5 pb-2">
-        <small class="text-secondary py-5">Post by {{ post.username }} &sdot; {{ post.sent_at.strftime("%Y-%m-%d %H:%M") }}</small>
+        <small class="text-secondary py-5">Post by {{ post.author }} &sdot; {{ post.sent_at.strftime("%Y-%m-%d %H:%M") }}</small>
     </div>
     <div class="d-flex align-items-center">
         <h1>{{ post.title }}</h1>
@@ -17,6 +17,23 @@
                 <i class="bi bi-heart{%if post.liked %}-fill{% endif %}"></i>
             </a>
         </span>
+        {% if current_user.is_authenticated %}
+
+        {% if post.can_edit %}
+        <span class="px-3">
+            <a class="text-decoration-none text-dark" href="/posts/{{ post.id }}/edit">
+                <i class="bi bi-pencil text-dark"></i>
+            </a>
+        </span>
+        {% endif %}
+        {% if post.can_delete %}
+        <span class="px-3">
+            <a class="text-decoration-none text-danger" href="/api/posts/{{ post.id }}/delete">
+                <i class="bi bi-trash"></i>
+            </a>
+        </span>
+        {% endif %}
+        {% endif %}
     </div>
     {{ post.content }}
     <div class="d-flex pt-3">
@@ -27,7 +44,40 @@
         </span>
     </div>
     
-    
+    <div class="pt-5">
+        <h5>Continuations ({{ post.continuations|length }}): </h5>
+        {% for continuation in post.continuations %}
+        <a class="text-decoration-none text-dark" href="/posts/{{ continuation.id }}">{{ continuation.title }}</a>
+        {% endfor %}
+
+        <form>
+            <button type="submit" class="btn btn-primary">Continue the story</button>
+        </form>
+    </div>
+
+    <div class="pt-5">
+        <h5>Comments ({{ post.comments|length }})</h5>
+        <div class="pt-3 pb-3">
+            {% for comment in post.comments %}
+            {{ comment.content }}
+            {% endfor %}
+        </div>
+    </div>
+
+    {% if current_user.is_authenticated %}
+    <form method="POST">
+        <div class="form-group pb-2">
+            <label for="continuation-content">Leave a comment:</label>
+            <textarea class="form-control" name="content" maxlength="1500" id="continuation-content" rows="3" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Send</button>
+    </form>
+    {% else %}
+    <div class="pt-1">
+        <a href="/login?next={{ request.path }}">Log in</a> to leave a comment.
+    </div>
+    {% endif %}
+
 </div>
 
 {% if current_user.is_authenticated %}
