--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
             <input type="password" name="password" class="form-control" id="password-field" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 </div>
 {% endblock %}
