--- a/templates/newstory.html
+++ b/templates/newstory.html
@@ -17,6 +17,7 @@
                 <input name='tags' class="form-control border-0 bg-light" placeholder="Add tag...">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </form>
     </div>
 </div>
