--- a/templates/register.html
+++ b/templates/register.html
@@ -21,6 +21,7 @@
             <input type="password" name="password2" class="form-control" id="password-field-2" required>
         </div>
         <button type="submit" class="btn btn-primary">Sign up</button>
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 </div>
 {% endblock %}
