--- a/templates/storypage.html
+++ b/templates/storypage.html
@@ -7,15 +7,16 @@
     </div>
     <div class="d-flex align-items-center">
         <h1>{{ post.title }}</h1>
-        <!-- <i class="px-3 bi bi-heart"></i>-->        
+        <!-- <i class="px-3 bi bi-heart"></i>-->
         <span role="button" tabindex="0">
             {% if current_user.is_authenticated %}
             <a id="btn-like" class="px-3 text-decoration-none text-dark">
-            {% else %}
-            <a id="btn-like" class="px-3 text-decoration-none text-dark" href="/login">
-            {% endif %}
-                <i class="bi bi-heart{%if post.liked %}-fill{% endif %}"></i>
-            </a>
+                {% else %}
+                <a id="btn-like" class="px-3 text-decoration-none text-dark" href="/login">
+                    {% endif %}
+                    {{ post.num_likes }}
+                    <i class="bi bi-heart{%if post.liked %}-fill{% endif %}"></i>
+                </a>
         </span>
         {% if current_user.is_authenticated %}
 
@@ -43,7 +44,7 @@
             {% endfor %}
         </span>
     </div>
-    
+
     <div class="pt-5">
         <h5>Continuations ({{ post.continuations|length }}): </h5>
         {% for continuation in post.continuations %}
@@ -52,25 +53,57 @@
 
         <form>
             <button type="submit" class="btn btn-primary">Continue the story</button>
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </form>
     </div>
 
     <div class="pt-5">
         <h5>Comments ({{ post.comments|length }})</h5>
-        <div class="pt-3 pb-3">
+    </div>
+
+    <div class="col-md-12 col-lg-10">
+        <div class="card text-dark border-0">
             {% for comment in post.comments %}
-            {{ comment.content }}
+            <div class="card-body">
+                <div class="d-flex flex-start">
+                    <span class="bi bi-heart py-4 me-4"><p class="text-center text-secondary">{{ comment.likes }}</p></span>
+                    
+                    <div>
+                        <!-- <img class="rounded-circle shadow-1-strong me-3"
+                            src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(33).webp" alt="avatar"
+                            width="60" height="60" />
+                        <div> -->
+                        
+                        <h6 class="fw-bold mb-1">{{ comment.username }}</h6>
+                        <div class="d-flex align-items-center mb-3">
+                            <p class="mb-0 text-secondary">
+                                {{ comment.sent_at.strftime("%B %d, %Y at %H:%M") }}
+                            </p>
+                            <a href="#!" class="link-muted"><i class="fas fa-heart ms-2"></i></a>
+                        </div>
+                        <p class="mb-0">
+                            {{ comment.content }}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% if not loop.last %}
+            <hr class="my-0" />
+            {% endif %}
             {% endfor %}
         </div>
     </div>
+
 
     {% if current_user.is_authenticated %}
     <form method="POST">
         <div class="form-group pb-2">
             <label for="continuation-content">Leave a comment:</label>
-            <textarea class="form-control" name="content" maxlength="1500" id="continuation-content" rows="3" required></textarea>
+            <textarea class="form-control" name="content" maxlength="1500" id="continuation-content" rows="3"
+                required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Send</button>
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
     {% else %}
     <div class="pt-1">
@@ -82,7 +115,7 @@
 
 {% if current_user.is_authenticated %}
 <script>
-    $(document).ready(function () {
+/*     $(document).ready(function () {
         $('#btn-like').click(function () {
             const update = { post_id: {{ post.id }} };
             const options = { method: 'POST', headers: { 'Content-Type': 'application/json', }, body: JSON.stringify(update), };
@@ -93,6 +126,23 @@
                         $('#btn-like').html(`<i class="bi bi-heart-fill"></i>`);
                     } else {
                         $('#btn-like').html(`<i class="bi bi-heart"></i>`);
+                    }
+                });
+        });
+    }); */
+
+    $(document).ready(function () {
+        $('#btn-like').click(function () {
+            const update = { token: '{{ session.csrf_token }}' };
+            const options = { method: 'POST', headers: { 'Content-Type': 'application/json', }, body: JSON.stringify(update), };
+            console.log(options);
+            fetch('/api/posts/{{ post.id }}/like', options)
+                .then(response => response.json())
+                .then(data => {
+                    if (data.liked) {
+                        $('#btn-like').html(`${data.num_likes} <i class="bi bi-heart-fill"></i>`);
+                    } else {
+                        $('#btn-like').html(`${data.num_likes} <i class="bi bi-heart"></i>`);
                     }
                 });
         });
