--- a/templates/storypage.html
+++ b/templates/storypage.html
@@ -11,12 +11,12 @@
         <span role="button" tabindex="0">
             {% if current_user.is_authenticated %}
             <a id="btn-like" class="px-3 text-decoration-none text-dark">
-                {% else %}
-                <a id="btn-like" class="px-3 text-decoration-none text-dark" href="/login">
-                    {% endif %}
-                    {{ post.num_likes }}
-                    <i class="bi bi-heart{%if post.liked %}-fill{% endif %}"></i>
-                </a>
+            {% else %}
+            <a id="btn-like" class="px-3 text-decoration-none text-dark" href="/login?next={{ request.path }}">
+            {% endif %}
+                {{ post.num_likes }}
+                <i class="bi bi-heart{%if post.liked %}-fill{% endif %}"></i>
+            </a>
         </span>
         {% if current_user.is_authenticated %}
 
