--- a/templates/continuation.html
+++ b/templates/continuation.html
@@ -3,11 +3,10 @@
 {% block content_body %}
 <div class="container">
     <div class="pt-5 pb-2">
-        <small class="text-secondary py-5">Post by {{ post.author }} &sdot; {{ post.sent_at.strftime("%Y-%m-%d %H:%M") }}</small>
+        <small class="text-secondary py-5">By {{ post.author }} &sdot; {{ post.sent_at.strftime("%Y-%m-%d %H:%M") }}</small>
     </div>
     <div class="d-flex align-items-center">
-        <h1>{{ post.title }}</h1>
-        <!-- <i class="px-3 bi bi-heart"></i>-->
+        <h2>{{ post.title }} <span class="text-secondary">part #{{ post.ancestors + 1 }}</span></h2>
         <span role="button" tabindex="0">
             {% if current_user.is_authenticated %}
             <a id="btn-like" class="px-3 text-decoration-none text-dark">
@@ -37,15 +36,15 @@
         {% endif %}
     </div>
     {{ post.content }}
-    <div class="d-flex pt-3">
-        <span class="me-auto">
-            {% for tag in post.tags %}
-            <span class="badge rounded-pill bg-secondary">#{{ tag }}</span>
-            {% endfor %}
-        </span>
-    </div>
 
-    <div class="pt-5">
+    <p class="pt-3">
+        {% if post.ancestors == 1 %}
+        <a href="/posts/{{ post.parent_id }}">Previous part</a>
+        {% else %}
+        <a href="/continuations/{{ post.parent_id }}">Previous part</a>
+        {% endif %}
+    </p>
+    <div class="pt-2">
         <h5>Continuations ({{ post.continuations|length }}): </h5>
         <ul>
         {% for continuation in post.continuations %}
@@ -100,7 +99,7 @@
 
 
     {% if current_user.is_authenticated %}
-    <form class="mt-2 mb-5" method="POST">
+    <form method="POST">
         <div class="form-group pb-2">
             <label for="continuation-content">Leave a comment:</label>
             <textarea class="form-control" name="content" maxlength="1500" id="continuation-content" rows="3"
